--- a/flux-test.cabal
+++ b/flux-test.cabal
@@ -25,5 +25,6 @@ executable flux-test
                      , transformers-compat
                      , react-flux
                      , text
+                     , deepseq
   hs-source-dirs:      src
   default-language:    Haskell2010
