--- a/fluxette.cabal
+++ b/fluxette.cabal
@@ -31,5 +31,6 @@ executable fluxette
                      , react-flux
                      , text
                      , deepseq
+                     , random-shuffle
   hs-source-dirs:      src
   default-language:    Haskell2010
