--- a/fluxette.cabal
+++ b/fluxette.cabal
@@ -32,6 +32,7 @@ executable fluxette
                      , text
                      , deepseq
                      , random-shuffle
+                     , aeson
   hs-source-dirs:      src
   default-language:    Haskell2010
 
